Fix code view z-index. Resolves #41

--- a/src/styles/components/stage-editor/_stage-editor.scss
+++ b/src/styles/components/stage-editor/_stage-editor.scss
@@ -15,7 +15,7 @@
     opacity: 0;
     transform-origin: top;
     transform: scaleY(0);
-    z-index: 2;
+    z-index: var(--z-panel);
     top: 0;
     left: 0;
     width: 100%;
